[package]
name = "ez-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
color-eyre = "0.5.11"
igd = { version = "0.12.0", features = ["aio"] }
local-ip-address = "0.4.4"
once_cell = "1.9.0"
port_scanner = "0.1.5"
public-ip = "0.2.1"

structopt = "0.3.25"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["std", "fmt"] }

[features]
