[package]
name = "ez-p2p"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.18", features = ["derive"] }
[features]
